Secondary section: nowrap corrected

--- a/style.css
+++ b/style.css
@@ -72,6 +72,12 @@
 }
 
 
+.secondary {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .secondary-title {
     text-align: center;
     font-size: 36px;
@@ -82,18 +88,9 @@
 
 .secondary-container {
     display: flex;
-    text-align: center;
-    justify-content: space-between;
-    padding: 0 550px 100px 550px;
-}
-
-.illustration {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    padding: 0;
-    margin: 0;
+    justify-content: center;
+    gap: 52px;
+    flex-wrap: wrap;
 }
 
 .image {
@@ -104,10 +101,14 @@
 }
 
 .subtext {
+    text-align: center;
     padding: 12px 0;
-    width: 150px;
+    max-width: 150px;
     color: #4B5563;
+    padding: 10px 0 100px 0;
 }
+
+
 
 .quote-section {
     padding: 120px 550px;
